# rust-simple-fs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.devai/: config.toml
dev/spec/: internal-api-reference.md  spec-list-globs-file-iter.md
doc/: api-reference.md
doc/for-llm/: api-reference-for-llm.md
src/: collapser.rs  common.rs  dir.rs  error.rs  file.rs  glob.rs  globs_dir_iter.rs  globs_file_iter.rs  globs_iter.rs  iter_dirs.rs  iter_files.rs  lib.rs  list_options.rs  normalizer.rs  reader.rs  safer_remove.rs  sfile.rs  spath.rs  watch.rs  with_json.rs  with_toml.rs
src/_tests/: tests_spath.rs
src/common/: mod.rs  pretty.rs  smeta.rs  system.rs
src/featured/: bin_nums.rs  mod.rs  with_json.rs  with_toml.rs
src/featured/with_json/: load.rs  mod.rs  ndjson.rs  save.rs
src/list/: glob.rs  globs_dir_iter.rs  globs_file_iter.rs  iter_dirs.rs  iter_files.rs  mod.rs  sort.rs
src/reshape/: collapser.rs  normalizer.rs
src/safer/: mod.rs  safer_remove_impl.rs  safer_trash_impl.rs  safer_trash_options.rs  support.rs
src/safer_remove/: safer_remove_impl.rs  safer_remove_options.rs
src/span/: csv_line_span.rs  csv_spans.rs  line_span.rs  line_spans.rs  mod.rs  read_span.rs
src/support/: collapser.rs  mod.rs  normalizer.rs
tests/: tests_list.rs  tests_list_dirs.rs  tests_list_files.rs  tests_spath.rs
tests-data/: example.csv  file1.md  file2.txt
tests-data/another-dir/: document.txt  notes.md
tests-data/another-dir/sub-dir/: data.txt  example.md
tests-data/another-dir/sub-dir/deep-folder/: final.md  final.txt
tests-data/dir1/: file3.md  file4.txt
tests-data/dir1/dir2/: file5.md  file6.txt
tests-data/dir1/dir2/dir3/: file7.md  file8.txt
