[package]
name = "simple-fs"
version = "0.12.0-beta.1-WIP"
edition = "2024"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple and convenient API for File System access"
categories = ["filesystem"]
keywords = [
	"file-system",
	"json",
	"toml",
	"io"
]
homepage = "https://github.com/jeremychone/rust-simple-fs"
repository = "https://github.com/jeremychone/rust-simple-fs"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[features]
"full" = ["with-json", "with-toml", "bin-nums"]
"with-json" = ["serde", "serde_json"]
"with-toml" = ["serde", "toml"]
"bin-nums" = ["byteorder"]

[dependencies]
# -- Files
camino = "1" # for utf8 path
pathdiff = { version = "0.2.2", features = ["camino"]}
walkdir = "2"
globset = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
trash = "5.2.5"
mime_guess = "2.0.5"
# -- Feature: json, toml
serde = { version = "1", features = ["derive"], optional = true}
# -- Feature: json
serde_json = { version = "1", optional = true}
# -- Feature: toml
toml = { version = "1", optional = true}
# -- Features: bin-nums
byteorder = { version = "1.5", optional = true}
path-clean = "1.0.1"
# -- Other
derive_more = {version = "2.0", features = ["from", "display"] }
flume = "0.12"
memchr = "2"
